--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,10 @@
 .DS_Store
 .eslintcache
 .stylelintcache
-coverage
-node_modules
+
+coverage/
+node_modules/
+
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
