--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@fastcms/stylelint-config",
-  "version": "1.3.2",
+  "version": "1.4.0",
   "private": false,
   "description": "Shared @stylelint configs for web development projects of @fastcms.",
   "keywords": [
@@ -52,7 +52,7 @@
     "prettier:fix": "prettier --write \"**/*.{json,html,md,mdx}\"",
     "stylelint": "stylelint --cache --aei \"**/*.{css,scss,less,wxss,jsx,tsx}\"",
     "stylelint:fix": "stylelint --cache --fix --aei \"**/*.{css,scss,less,wxss,jsx,tsx}\"",
-    "test": "jest --cache --passWithNoTests  --watch",
+    "test": "jest --cache --passWithNoTests --watch",
     "test:ci": "jest --ci --passWithNoTests"
   },
   "lint-staged": {
@@ -97,12 +97,20 @@
       "!coverage/**",
       "!node_modules/**"
     ],
+    "extensionsToTreatAsEsm": [
+      ".ts",
+      ".tsx"
+    ],
     "roots": [
       "<rootDir>"
     ],
     "testMatch": [
       "**/__tests__/**/*.[jt]s?(x)",
       "**/?(*.)+(spec|test).[jt]s?(x)"
+    ],
+    "testPathIgnorePatterns": [
+      "/__files__/",
+      "/node_modules/"
     ],
     "transform": {
       "^.+\\.[jt]sx?$": "@swc/jest"
@@ -111,28 +119,30 @@
   },
   "dependencies": {
     "stylelint-config-prettier": "^9.0.3",
-    "stylelint-config-standard": "^22.0.0",
+    "stylelint-config-standard": "^23.0.0",
+    "stylelint-config-styled-components": "^0.1.1",
     "stylelint-declaration-block-no-ignored-properties": "^2.4.0",
     "stylelint-no-unsupported-browser-features": "^5.0.2",
-    "stylelint-order": "^4.1.0"
+    "stylelint-order": "^5.0.0",
+    "stylelint-processor-styled-components": "^1.10.0"
   },
   "devDependencies": {
     "@babel/core": "^7.15.8",
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
-    "@fastcms/eslint-config": "^1.7.5",
-    "@swc/core": "^1.2.101",
+    "@fastcms/eslint-config": "^1.8.2",
+    "@swc/core": "^1.2.102",
     "@swc/jest": "^0.2.5",
     "@types/jest": "^27.0.2",
-    "@types/node": "^16.11.1",
-    "@types/react": "^17.0.30",
-    "@types/react-dom": "^17.0.9",
+    "@types/node": "^16.11.3",
+    "@types/react": "^17.0.31",
+    "@types/react-dom": "^17.0.10",
     "@types/stylelint": "^13.13.3",
     "babel-plugin-module-resolver": "^4.1.0",
     "commitizen": "^4.2.4",
     "cz-emoji": "^1.3.1",
     "eslint": "^7.32.0",
-    "husky": "^7.0.2",
+    "husky": "^7.0.4",
     "jest": "^27.3.1",
     "lint-staged": "^11.2.3",
     "npm-run-all": "^4.1.5",
@@ -141,12 +151,12 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "rimraf": "^3.0.2",
-    "stylelint": "^13.13.1",
+    "stylelint": "^14.0.0",
     "typescript": "^4.4.4"
   },
   "peerDependencies": {
     "prettier": "2.4.1",
-    "stylelint": "^13.13.1"
+    "stylelint": "^14.0.0"
   },
   "engines": {
     "node": ">=16"
