--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@fastcms/stylelint-config",
-  "version": "1.5.4",
+  "version": "1.5.5",
   "private": false,
   "description": "Shared @stylelint configs for web development projects of @fastcms.",
   "keywords": [
@@ -119,6 +119,8 @@
   },
   "dependencies": {
     "@stylelint/postcss-css-in-js": "^0.37.2",
+    "postcss-less": "^5.0.0",
+    "postcss-scss": "^4.0.2",
     "postcss-syntax": "^0.36.2",
     "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-standard": "^23.0.0",
